--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <center><h1>Self Description</h1>
-<h3>My highschool was Spencerport highschool in New York. During my life I've moved around to different school districts around Rochester from Henretta, Ontario, and finally finished High School in Spencerport. My family is from Ukraine. My biggest hobbies include video games, 3d art and game design. I enjoy playing co-op games specifically and I am going into software engineering instead of game design for a major due to the ability to transfer over to game design later in my career and also when turning a hobby into a job it takes all the fun out of it. 
-</h3></center>
+<p><font size=14>My highschool was Spencerport highschool in New York. During my life I've moved around to different school districts around Rochester from Henretta, Ontario, and finally finished High School in Spencerport. My family is from Ukraine. My biggest hobbies include video games, 3d art and game design. I enjoy playing co-op games specifically and I am going into software engineering instead of game design for a major due to the ability to transfer over to game design later in my career and also when turning a hobby into a job it takes all the fun out of it. 
+</font></p></center>
 </body>
 </html>
