--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" href="stylesheet.css">
+</head>
 <body>
 <center><h1>Self Description</h1>
-<p><font size=10>My highschool was Spencerport highschool in New York. During my life I've moved around to different school districts around Rochester from Henretta, Ontario, and finally finished High School in Spencerport. My family is from Ukraine. My biggest hobbies include video games, 3d art and game design. I enjoy playing co-op games specifically and I am going into software engineering instead of game design for a major due to the ability to transfer over to game design later in my career and also when turning a hobby into a job it takes all the fun out of it. 
+<p><font size=5>My highschool was Spencerport highschool in New York. During my life I've moved around to different school districts around Rochester from Henretta, Ontario, and finally finished High School in Spencerport. My family is from Ukraine. My biggest hobbies include video games, 3d art and game design. I enjoy playing co-op games specifically and I am going into software engineering instead of game design for a major due to the ability to transfer over to game design later in my career and also when turning a hobby into a job it takes all the fun out of it. 
 </font></p>
 <br>
 <h2>Favorite food are Gyros</h2>
@@ -10,12 +13,14 @@
 <br>
 <a href="https://www.rit.edu/computing/department-software-engineering"> RIT SE WEBSITE</a>
 <h2>What I would like to learn in this course</h2>
-<ul>
-	<li>Collaborative skills</li>
-	<li>learn some more html</li>
-	<li>improve my communication skills with my group members</li>
-	<li>improve my time management skills</li>
-</ul>
+<div class="parent">
+	<ul>
+		<li>Collaborative skills</li>
+		<li>learn some more html</li>
+		<li>improve my communication skills with my group members</li>
+		<li>improve my time management skills</li>
+	</ul>
+</div>
 </center>
 </body>
 </html>
